<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="top.iu1314.calculation.TitleFragment"
        android:label="@string/title_Nav"
        tools:layout="@layout/fragment_title">
        <action
            android:id="@+id/action_titleFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="top.iu1314.calculation.QuestionFragment"
        android:label="@string/question_Nav">
        <action
            android:id="@+id/action_questionFragment_to_loseFragment"
            app:destination="@id/loseFragment" />
        <action
            android:id="@+id/action_questionFragment_to_winFragment"
            app:destination="@id/winFragment" />
    </fragment>
    <fragment
        android:id="@+id/loseFragment"
        android:name="top.iu1314.calculation.LoseFragment"
        android:label="@string/lose_Nav">
        <action
            android:id="@+id/action_loseFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
    <fragment
        android:id="@+id/winFragment"
        android:name="top.iu1314.calculation.WinFragment"
        android:label="@string/win_Nav">
        <action
            android:id="@+id/action_winFragment_to_titleFragment"
            app:destination="@id/titleFragment" />
    </fragment>
</navigation>